deploy/kubernetes/openpitrix/ingress/openpitrix-ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: openpitrix-ingress
  namespace: ${NAMESPACE}
spec:
  tls:
  - hosts:
    - ${HOST}
    secretName: ingress-tls
  rules:
  - host: ${HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: openpitrix-dashboard
          servicePort: 80
